Kiali/kiali-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  gateways:
  - istio-system/global-gateway
  hosts:
  - kiali.example.local
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
